Fix FAB size on ios

--- a/less/bootstrap-theme/fab.less
+++ b/less/bootstrap-theme/fab.less
@@ -44,7 +44,7 @@
 
         border: none;
         background-color: transparent;
-        min-width: auto;
+        min-width: 1px;
         .box-shadow(none);
 
         > li {
